--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,28 +1,67 @@
-name: Rust CI
+name: Release Builds
+
+env:
+  APP_NAME: bonk
+
 on:
-    release:
-        types: [created]
+  release:
+    types: [created]
+
+permissions:
+  contents: write
 
 jobs:
-  release:
-    name: release ${{ matrix.target }}
-    runs-on: ubuntu-latest
+  build:
+    name: Build (${{ matrix.target }})
+    runs-on: ${{ matrix.os }}
+
     strategy:
       fail-fast: false
       matrix:
         include:
-          - target: x86_64-pc-windows-gnu
-            archive: zip
-          - target: x86_64-unknown-linux-musl
-            archive: tar.gz tar.xz tar.zst
-          - target: x86_64-apple-darwin
-            archive: zip
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+          - os: macos-latest
+            target: x86_64-apple-darwin
+          - os: macos-latest
+            target: aarch64-apple-darwin
+          - os: windows-latest
+            target: x86_64-pc-windows-msvc
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-musl
+
     steps:
-      - uses: actions/checkout@master
-      - name: Compile and release
-        uses: rust-build/rust-build.action@v1.4.4
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
         with:
-          RUSTTARGET: ${{ matrix.target }}
-          ARCHIVE_TYPES: ${{ matrix.archive }}
+          targets: ${{ matrix.target }}
+
+      - name: Build
+        run: cargo build --release --target ${{ matrix.target }}
+
+      - name: Prepare artifact
+        shell: bash
+        run: |
+          set -e
+          mkdir dist
+          BIN_DIR="target/${{ matrix.target }}/release"
+
+          if [[ "${{ runner.os }}" == "Windows" ]]; then
+            cp "$BIN_DIR/${{ env.APP_NAME }}.exe" dist/
+            cd dist
+            7z a "${{ env.APP_NAME }}-${{ matrix.target }}.zip" "${{ env.APP_NAME }}.exe"
+          else
+            cp "$BIN_DIR/${{ env.APP_NAME }}" dist/
+            cd dist
+            tar -czf "${{ env.APP_NAME }}-${{ matrix.target }}.tar.gz" "${{ env.APP_NAME }}"
+          fi
+
+      - name: Upload Release Asset
+        uses: softprops/action-gh-release@v2
+        with: 
+          files: |
+              dist/${{ env.APP_NAME }}*.tar.gz
+              dist/${{ env.APP_NAME }}*.zip
